[package]
name = "seofast-ru"
version = "0.1.0"
edition = "2021"

[dependencies]
thirtyfour = {git = "https://github.com/westsidedev/thirtyfour"}
tokio = {version = "1.40.0", features = ["full"]}
more-config = { version = "2.1.4", features = ["all", "async"] }
serde = "1.0.209"
serde_json = "1.0.128"
chrono = "0.4.38"
chrono-tz = "0.10.0"
regex = "1.11.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
debug = false
strip = true
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

